FIX: Layout for KWICs.
Introduced to solve #85, the (flex) layout had side effects on KWICs layout. This commit fixes this layout issue.

--- a/app/_attachments/main.css
+++ b/app/_attachments/main.css
@@ -54,6 +54,9 @@ div.post {
 
 #content {
   border-top: 1px solid #eeeeee;
+}
+
+#memo>#content {
   display: flex;
   flex-direction: column;
 }
